<resources>
    <string name="app_name">Bookt_Admin</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurants_to_be_varified">Restaurants To be varified :</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="name">Name:</string>
    <string name="contact_info">Contact info</string>
    <string name="city">City:</string>
    <string name="restaurant">Restaurant:</string>
</resources>
